# assignment5-alignment

./: .gitignore  pyproject.toml  pyproject.toml_5080_backup
cs336_alignment/: custom_grader.py  custom_grader_test.py  data_utils.py  data_utils_test.py  eval_utils.py  evals_main.py  expert_iteration_train_main.py  grpo_train_config.py  grpo_train_main.py  grpo_utils.py  grpo_utils_test.py  huggingface_datasets_demo.py  pretrained_model_checkpoint.py  randomly_split_datasets.py  sft_helpers.py  sft_helpers_test.py  sft_train_main.py  vllm_inference_demo.py  vllm_load_hf_model_weights_demo.py  vllm_utils.py
cs336_alignment/prompts/: my_system_prompt.prompt
cs336_alignment/scripts/: run_evals_main.sh  run_expert_iteration_train_main.sh  run_grpo_train_main.sh  run_sft_train_main.sh
tests/: adapters.py  test_sft.py
